# Enterprise-AI-PPT

./: .env.example  .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Enterprise-AI-PPT-项目介绍.pptx  LICENSE  PROJECT_EVALUATION_REPORT.html  PROJECT_EVALUATION_REPORT.md  PROJECT_EVALUATION_REPORT_20260415.md  README.md  RELEASE_CHECKLIST.md  bootstrap.ps1  mkdocs.yml  pyproject.toml  requirements.txt  run_regression.py  run_sie_autoppt.ps1  score_review.py  赛意自动化ppt模板.pptx
docs/: AI_EXECUTION_PLAN.md  AI_PLANNER.md  API_REFERENCE.md  ARCHITECTURE.md  BACKUP_AND_RECOVERY.md  CLEANUP_TASKS.md  CLI_REFERENCE.md  COMPATIBILITY.md  COMPATIBILITY_MATRIX.md  DECK_JSON_SPEC.md  DEEP_TUNING.md  DIAGNOSTIC_ACTION_PLAN.md  DIAGNOSTIC_REPORT_2026-04-10.md  FEASIBILITY_REPORT.md  HOST_AI_BRIEF_PROMPT_TEMPLATE.md  HTML_INPUT_IMPROVEMENT_PLAN.md  HUMAN_VISUAL_QA.md  IMPROVEMENT_REVIEW_DECISIONS.md  INPUT_SPEC.md  LEGACY_BOUNDARY.md  LLM_COMPATIBILITY.md  ONCALL_RUNBOOK.md  PLUGIN_EXTENSIONS.md  PPT_WORKFLOW.md  PRODUCT_TEST_SCENARIOS.md  PROJECT_OVERVIEW_CN.md  README.md  REFERENCE_STYLE_LIBRARY.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  SAMPLES.md  SCORING_SYSTEM_REVIEW_DECISIONS.md  TEMPLATE_FUSION_PLAN.md  TESTING.md  TOKEN_SYSTEM_PLAN.md  TROUBLESHOOTING.md
input/: ai_pythonpptx_strategy.html  architecture_program_sample.html  pragmatic_traceability_planning.html
projects/: README.md
regression/: README.md
samples/: sample_deck_v2.json  visual_review_cases.json
scripts/: quality_gate.ps1
tests/: conftest.py  test_ai_planner.py  test_ai_planner_enhancements.py  test_battery_passport_slide.py  test_body_renderers.py  test_catalog_external_templates.py  test_clarifier.py  test_clarify_web.py  test_cli.py  test_content_density_split.py  test_content_rewriter.py  test_content_service.py  test_deck_planner.py  test_deck_spec_io.py  test_deck_spec_io_payload_validation.py  test_editable_pragmatic_traceability_ppt.py  test_equipment_mfg_digital_solution_deck.py  test_eu_supply_chain_compliance_slide.py  test_generation_integration.py  test_html_parser.py  test_import_external_template.py  test_internal_traceability_uat_logic_slide.py  test_language_policy.py  test_layout_policy.py  test_legacy_module_shims.py  test_llm_openai.py  test_models_payload_models.py  test_patterns.py  test_plugins.py  test_prepare_visual_review.py  test_prompting.py  test_quality_gate.py  test_real_ai_smoke.py  test_reference_styles_payload_validation.py  test_render_integration.py  test_review_onepage_slide.py  test_run_regression.py  test_score_review.py  test_sie_key_capabilities_slide.py  test_sie_onepage_designer.py  (+32 more)
tools/: README.md  analyze_template.py  apply_reference_body_slides.py  build_editable_pragmatic_traceability_ppt.py  build_sie_battery_passport_slide.py  build_sie_traceability_capability_slide.py  legacy_html_regression_check.ps1  prepare_visual_review.ps1  prepare_visual_review.py  regression_check.ps1  repair_directory_slides.py  run_real_ai_smoke.ps1  run_unit_tests.ps1  sie_autoppt_cli.py  update_template_version.ps1  upgrade_template_pool.py  v2_regression_check.ps1
(+221 files in other folders)
